shader code revamp